# rbi-inventory

./: .devenv.flake.nix  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  devenv.nix  flake.nix  justfile  logfile  mkdocs.yml  openapi.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: README.md  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  deploy-docs.yml  openapi.yml  pr-labeler.yml  pr-size.yml  release.yml  stale.yml
docs/: index.fr.md  index.md  roadmap.fr.md  roadmap.md
docs-old/architecture/: diagram.md
docs-old/reports/: 2025-11-26.md
docs/contributing/: guidelines.fr.md  guidelines.md  index.fr.md  index.md  pull-requests.fr.md  pull-requests.md
docs/development/: api-development.fr.md  api-development.md  architecture.fr.md  architecture.md  ci-cd.fr.md  ci-cd.md  code-style.fr.md  code-style.md  frontend-development.fr.md  frontend-development.md  index.fr.md  index.md  setup.fr.md  setup.md  testing.fr.md  testing.md
docs/getting-started/: configuration.fr.md  configuration.md  index.fr.md  index.md  installation.fr.md  installation.md  quick-start.fr.md  quick-start.md
docs/reference/: cli-commands.fr.md  cli-commands.md  environment-variables.fr.md  environment-variables.md  index.fr.md  (+3 more)
modules/: openapi.yaml
modules/remote-desktop/src-tauri/: Cargo.toml  tauri.conf.json
modules/remote-desktop/src-tauri/src/: main.rs
site/: 404.html  index.html  sitemap.xml
(+455 files in other folders)
