[package]
name = "rbi-remote"
version = "0.1.0"
description = "RBI Remote desktop client"
authors = ["RBI Inventory"]
edition = "2021"

[build-dependencies]
tauri-build = "2.0.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
